@@ -14,6 +14,7 @@
 -【Fix】静的出力時、ヘッダにゴミが出力される。
 -【Fix】致命的エラーメッセージ（初期ディレクトリ作成失敗）がきちんと表示されない。
 -【Fix】大きなファイルを送信されたとき、{<$Form_options.multipart_use_temp_dir>}を設定していても、すべてメモリに展開していた。((multipart_use_temp_dirを設定していない場合、無条件にメモリに展開します。))
+-【Security/httpd/EXE】HTTP_HOSTヘッダにタグを挿入可能だった。
 -他
 
 *Ver3.22 : 2019/02/15
